-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.0.0-rc1
-
None
-
376f77952e9c579043a26fcd6be33baed9fd1610
struct Foo { union { unsigned char All; struct { unsigned A : 1; unsigned B : 1; unsigned C : 1; } Bits; }; void func() { Bits.A = 1; // Not highlighted } };
- replaces
-
QTCREATORBUG-11170 Autocompletion of nested structs/unions omits several fields
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-10876 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
72171,10 | C++: fix support for nested anonymous classes | 3.0 | qt-creator/qt-creator | Status: ABANDONED | +1 | 0 |
73297,9 | C++: fix support for nested anonymous classes | master | qt-creator/qt-creator | Status: ABANDONED | +1 | 0 |
79368,4 | C++: fix support for nested anonymous classes | 3.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |